# Slicer-Interactive4DSegmentation

./: CMakeLists.txt
Load4D/: CMakeLists.txt  Load4D.py
Segment4D/: CMakeLists.txt  Segment4D.py
